--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -13,10 +13,10 @@
   description2: •  Helping client establish business model for market entry & positioning; demonstrating ownership by client-communication process
   description3: •  Conducting primary and secondary research, drafting a project scoping document and analyzing data to provide recommendations
 
-- title: Master of Science, Information Management
+- title: Master of Science, University of Illinois at Urbana-Champaign
   from: 2022
   to: 2024
-  description1: University of Illinois at Urbana-Champaign
+  description1: Information Management
   description2: "Coursework: Applied Business Research, Data Warehousing & Business Intelligence, Information Consulting, Data Visualization, etc."
 
   
@@ -43,10 +43,10 @@
   description3: •  Validated product fit & prioritization via A/B testing. Automated courses research fatigue, reducing 20% ongoing manual effort
   description4: •  Utilized 4C’s to identify markets, products, services. Applied Six Sigma for structured problem-solving yielded productivity boost
 
-- title: Bachelor of Engineering, Computer Science and Engineering
+- title: Bachelor of Engineering, University Institute of Technology, RGPV
   from: "July 2016"
   to: "June 2020"
-  description1: University Institute of Technology, RGPV 
+  description1: Computer Science and Engineering
   description2: "Coursework: Software Engineering & Project Management, DBMS, Web Engineering, IoT, Cyber Security, Operating Systems"
                
 
