programming-skills.yml

--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -13,7 +13,7 @@
   level: Advance
   color: secondary
 
-- nam1e: HTML/CSS
+- name1: HTML/CSS
   percentage: 85
   level: Intermediate
   color: info
