--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -13,6 +13,13 @@
   description2: •  Helping client establish business model for market entry & positioning; demonstrating ownership by client-communication process
   description3: •  Conducting primary and secondary research, drafting a project scoping document and analyzing data to provide recommendations
 
+- title:  Product Manager @ Illinois, Associate Product Manager 		   	                                    
+  from: "January 2023"
+  to: "May 2023"
+  description1: •  Orchestrated project workflow for 2 prototype launches, achieving 70% customer survey approval to exceed market expectations
+  description2: •  Generated KPI-driven product strategy and collaborated for successful marketing campaigns, driving innovation & product visibility
+  description3: •  Implemented Scrum methodology to optimize project management to deliver milestones for products EcoEssence & Campus Dwell
+
 - title: Master of Science, University of Illinois at Urbana-Champaign
   from: 2022
   to: 2024
