--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
  name              : Sankalp Jain
- image             : https://media.licdn.com/dms/image/C4D03AQEHvrKTxixSsQ/profile-displayphoto-shrink_800_800/0/1654262638257?e=2147483647&v=beta&t=hDKhgqB6RM-2zRWbxg0-Vez8eiedHGg-7ni0e0mvGCM
+ image             : assests/png/Sankalp profile.jpg
 #  behance           : your_username
 # dribbble          : your_username
 #  email             : username@domain.com
