--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
  name              : Sankalp Jain
- image             : https://github.com/sankalpjain63/sankalpjain63.github.io/blob/main/assets/pngs/Sankalp%20profile.JPG
+ image             : sankalpjain63.github.io/assets/pngs/Sankalp profile.jpg
 #  behance           : your_username
 # dribbble          : your_username
 #  email             : username@domain.com
