--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
  name              : Sankalp Jain
- image             : https://github.com/sankalpjain63/sankalpjain63.github.io/blob/main/assets/pngs/sankalp.jpg
+ image             : https://avatars.githubusercontent.com/u/125817071?s=400&u=7c80272cec1a2a2d70d6dba8f4f741f6e184aa04&v=4
 #  behance           : your_username
 # dribbble          : your_username
 #  email             : username@domain.com
