--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,7 +1,7 @@
 - title: Product Owner, Graybar
   from: "May 2023"
   to: present
-  description1: •  Product Launch. Introduced bilingual customer support and application interface to aid 20.5% electrical professionals, informed by Qualtrics go-to-market user research survey; managing product lifecycle with JIRA-Agile
+  description1: •  Launched bilingual customer support and application interface to aid 20.5% electrical professionals, informed by Qualtrics go-to-market user research survey; managing product lifecycle with JIRA-Agile
   description2: •  Deployed B2B Freight Cost Model using SQL/Snowflake & Power BI dashboard. Predicted freight costs, saving Graybar 10% from initial $100M
   description3: •  Built KPIs-data accuracy, latency & feedback for Value Tracker product, suggested service strategies from 57 solutions for customers
   description4: •  Developed a comprehensive Market Insights Report, identifying key trends and results for more than 2000 stakeholders
