--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@
 title               : Sankalp Jain 
 description         : >-
                        Hi, I am Sankalp!
-                       I am a graduate student at the University of Illinois at Urbana-Champaign, 
-                       pursuing an MS in Information Management.
+                       I am a dynamic Product Manager with an MS in Information Management
+                       from the University of Illinois at Urbana-Champaign.
                      
                        Feel free to check about me, my projects, and blogs.
 #title               :  Sankalp Jain 
